fix spacing above fullscreen btn

--- a/common/styles/scss/_markdown-container.scss
+++ b/common/styles/scss/_markdown-container.scss
@@ -28,7 +28,6 @@
 
         .figcaption-wrapper {
             min-height: 35px; // to account for margin + button height since button is "floating"
-            margin-top: 5px;
 
             figcaption {
                 display: inline;
@@ -37,7 +36,7 @@
 
         .iframe-btn-container {
             text-align: right;
-            margin-top: 5px;
+            margin-top: 10px;
 
             .chaise-btn.chaise-btn-iframe {
                 border: 2px solid #ccc;
